--- a/chrome-extension/templates/options.html
+++ b/chrome-extension/templates/options.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modbus Debugger Settings</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-dark-bg text-dark-text-primary font-mono antialiased p-6">
     <div id="options-app">
