--- a/chrome-extension/templates/popup.html
+++ b/chrome-extension/templates/popup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modbus Debugger</title>
+    <title> Modbus Protocol Analyzer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-dark-bg text-dark-text-primary font-mono antialiased overflow-hidden">
